2008-01-02  Aidan Kehoe  <kehoea@parhasard.net>

	* emacs.c (main_1): 
	Call the new vars_of_console_gtk function. 
	* console-gtk.c (vars_of_console_gtk): New.
	* console-gtk.c (gtk_perhaps_init_unseen_key_defaults):
	Correct the initialisation of the hash table, on the model of the
	MSW and TTY builds.
	

2008-01-02  Aidan Kehoe  <kehoea@parhasard.net>

	* doc.c (Fbuilt_in_symbol_file):
	Don't check is fun zero in the condition, check that it's not
	nil. Fixes the union build; thank you Stephen. 

2008-01-02  Mike Sperber  <mike@xemacs.org>

	* window.c (set_window_pixsize): Factor in the modeline when
	looking at window_min_width.  Remove obsolete comment about
	incorrect use of `default_face_height_and_width'.
	(change_window_height): Remove obsolete comment about
	incorrect use of `default_face_height_and_width'.

2007-12-30  Aidan Kehoe  <kehoea@parhasard.net>

	* doc.c (Fbuilt_in_symbol_file):
	Take a new TYPE argument, specifying whether the function or
	variable definition of the symbol should be searched for.
	Handle built-in macros correctly.

2007-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* event-xlike-inc.c (x_keysym_to_character): 
	* event-xlike-inc.c (gtk_keysym_to_character):
	Unify the typed character if possible, following the current value
	for the unicode precedence list. 

2007-12-24  Aidan Kehoe  <kehoea@parhasard.net>

	* symbols.c (Fintern_soft): 
	Provide a new optional third argument, DEFAULT, for those who want
	to check if "nil" is a symbol or not. (More realistically, general
	code that may get handed "nil" should probably use this argument.)

2007-12-23  Aidan Kehoe  <kehoea@parhasard.net>

	* objects-tty.c (tty_find_charset_font): 
	* objects-msw.c (mswindows_font_spec_matches_charset_stage_2):
	* objects-msw.c (mswindows_font_spec_matches_charset_stage_1):
	* objects-xlike-inc.c (x_font_spec_matches_charset): 
	* objects-xlike-inc.c (gtk_font_spec_matches_charset):
	If the charset is not specified when calling the