@@ -519,8 +519,7 @@ If TYPE is `defvar', then variable definitions are acceptable.
       fun = Findirect_function (symbol);
 
       if (SUBRP (fun) || (CONSP(fun) && (EQ (Qmacro, Fcar_safe (fun)))
-                          && !NILP(fun = Fcdr_safe (fun))
-                          && (SUBRP (fun))))
+                          && (fun = Fcdr_safe (fun), SUBRP (fun))))
 	{
 	  if (XSUBR (fun)->doc == 0)
 	    return Qnil;
