@@ -1,3 +1,8 @@
+2008-01-03  Stephen J. Turnbull  <stephen@xemacs.org>
+
+	* automated/symbol-tests.el (Symbol documentation): Add tests to
+	check documentation extraction.
+
 2007-12-29  Stephen J. Turnbull  <stephen@xemacs.org>
 
 	* automated/test-harness.el (test-harness-test-compiled):
